fix  (core): Generate initial MD for Template Things