@@ -29,8 +29,8 @@ import dev.enola.core.view.EnolaMessages;
 import dev.enola.data.ProviderFromIRI;
 import dev.enola.thing.message.MessageToThingConverter;
 import dev.enola.thing.message.MessageWithIRI;
+import dev.enola.thing.message.MoreThings;
 import dev.enola.thing.proto.Thing;
-import dev.enola.thing.proto.Things;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
@@ -67,13 +67,10 @@ public class EnolaThingProvider
         var any = response.getThing();
 
         try {
-            // TODO This Things VS Things business will need some more thought...
-            if (any.getTypeUrl().endsWith("Thing")) {
-                return any.unpack(Thing.class);
-            } else if (any.getTypeUrl().endsWith("Things")) {
-                var things = any.unpack(Things.class);
-                // TODO The get(0) is wrong, we need to return Things here, and UI needs to show all
-                return things.getThingsList().get(0);
+            var things = MoreThings.fromAny(any);
+            if (!things.isEmpty()) {
+                // TODO This is wrong, we need to return Things here, and UI needs to show all?
+                return things.getFirst();
             } else {
                 var message = enolaMessages.toMessage(any);
                 return m2t.convert(new MessageWithIRI(iri, message)).build();
